header and footer

--- a/app/_header.html
+++ b/app/_header.html
@@ -1,22 +1,23 @@
 <header class="header">
-		<div class="container d-flex justify-content-between align-content-center">
-			<a href="/" class="logo">
-				<!-- <img src="img/logo.svg" alt="logo"> -->
-			</a>
-			<div class="d-flex align-items-center">
-				<ul class="menu d-flex align-items-center flex-column flex-lg-row">
-					<!-- <li><a class="go_to" href="#top">home</a></li>
-					<li><a href="tours.html">tours</a></li>
-					<li><a class="go_to" href="#about">about us</a></li>
-					<li><a href="blog.html">blog</a></li>
-					<li><a class="go_to" href="#footer">contacts</a></li> -->
-				</ul>
-				<div class="burger d-block d-lg-none">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
+	<div class="container header-content">
+		<a href="/" class="logo">
+			<img src="img/svg/logo.svg" alt="logo">
+		</a>
+		<div class="header-body">
+			<ul class="menu">
+				<li><a href="#">Angebot</a></li>
+				<li><a href="#">Für Unternehmen</a></li>
+				<li><a href="#">Über uns</a></li>
+				<li><a href="#">Aktuelles</a></li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#"> Kontakt</a></li>
+			</ul>
+			<div class="burger d-block d-lg-none">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
 		</div>
-	</header>
+	</div>
+</header>
