--- a/app/index.html
+++ b/app/index.html
@@ -22,46 +22,106 @@
 
 	<!-- Libs -->
 	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
+	<link rel="stylesheet" href="libs/slick/slick.css">
 
 	<!-- Style -->
 	<link rel="stylesheet" href="css/index.min.css">
 </head>
 <body>
 	<header class="header">
-		<div class="container d-flex justify-content-between align-content-center">
-			<a href="/" class="logo">
-				<!-- <img src="img/logo.svg" alt="logo"> -->
-			</a>
-			<div class="d-flex align-items-center">
-				<ul class="menu d-flex align-items-center flex-column flex-lg-row">
-					<!-- <li><a class="go_to" href="#top">home</a></li>
-					<li><a href="tours.html">tours</a></li>
-					<li><a class="go_to" href="#about">about us</a></li>
-					<li><a href="blog.html">blog</a></li>
-					<li><a class="go_to" href="#footer">contacts</a></li> -->
-				</ul>
-				<div class="burger d-block d-lg-none">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
+	<div class="container header-content">
+		<a href="/" class="logo">
+			<img src="img/svg/logo.svg" alt="logo">
+		</a>
+		<div class="header-body">
+			<ul class="menu">
+				<li><a href="#">Angebot</a></li>
+				<li><a href="#">Für Unternehmen</a></li>
+				<li><a href="#">Über uns</a></li>
+				<li><a href="#">Aktuelles</a></li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#"> Kontakt</a></li>
+			</ul>
+			<div class="burger d-block d-lg-none">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
 		</div>
-	</header>
+	</div>
+</header>
 	<main class="main">
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-4">1</div>
 				<div class="col-4">2</div>
 				<div class="col-4">3</div>
 			</div>
-		</div>
+		</div> -->
 	</main>
 	<footer class="footer">
-
+    <div class="footer-content">
+        <div class="container">
+            <div class="row footer-text">
+                <div class="col-12 footer-logo">
+                    <img src="img/svg/logo.svg" alt="img">
+                </div>
+                <div class="col-3">
+                    <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
+                        inAut GmbH Waldstätterstrasse 3 6003 Luzern
+                    </a>
+                </div>
+                <div class="col-6">
+                    <div class="footer-block">
+                        <div>Telefon</div>
+                        <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
+                    </div>
+                    <div class="footer-block">
+                        <div>E-Mail</div>
+                        <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <ul>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Angebot</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Für Unternehmen</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Über uns</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Aktuelles</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Jobs</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Kontakt</a>
+                        </li>
+                    </ul>
+                    <!-- <div class="footer-block">
+                        <img src="img/svg/arrows.svg" alt="img">
+                        <div>Angebot</div>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyrights">
+        Impressum  |  Datenschutz
+    </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
