--- a/app/_footer.html
+++ b/app/_footer.html
@@ -1,3 +1,61 @@
 <footer class="footer">
-
+    <div class="footer-content">
+        <div class="container">
+            <div class="row footer-text">
+                <div class="col-12 footer-logo">
+                    <img src="img/svg/logo.svg" alt="img">
+                </div>
+                <div class="col-3">
+                    <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
+                        inAut GmbH Waldstätterstrasse 3 6003 Luzern
+                    </a>
+                </div>
+                <div class="col-6">
+                    <div class="footer-block">
+                        <div>Telefon</div>
+                        <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
+                    </div>
+                    <div class="footer-block">
+                        <div>E-Mail</div>
+                        <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <ul>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Angebot</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Für Unternehmen</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Über uns</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Aktuelles</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Jobs</a>
+                        </li>
+                        <li class="footer-block">
+                            <img src="img/svg/arrows.svg" alt="img">
+                            <a href="#">Kontakt</a>
+                        </li>
+                    </ul>
+                    <!-- <div class="footer-block">
+                        <img src="img/svg/arrows.svg" alt="img">
+                        <div>Angebot</div>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyrights">
+        Impressum  |  Datenschutz
+    </div>
 </footer>
