--- a/app/index.html
+++ b/app/index.html
@@ -52,14 +52,132 @@
 	</div>
 </header>
 	<main class="main">
-		<!-- <div class="container">
-			<div class="row">
-				<div class="col-4">1</div>
-				<div class="col-4">2</div>
-				<div class="col-4">3</div>
+	<div class="container home">
+		<div class="customer-slider">
+			<div class="home-content">
+				<div class="home-title">inAut GmbH</div>
+				<div class="home-text">
+					<div>Ihre Stellensuche</div>
+					<div>in guten Händen</div>
+				</div>
+				<a class="home-btn" href="#">JOBs</a>
 			</div>
-		</div> -->
-	</main>
+
+			<div class="home-content home-block-second">
+				<div class="home-title">inAut GmbH</div>
+				<div class="home-text">
+					<div>Professionelle Unterstützung bei</div>
+					<div>der Lehrstellensuche</div>
+				</div>
+				<a class="home-btn" href="#">Angebot</a>
+			</div>
+
+			<div class="home-content home-block-third">
+				<div class="home-title">inAut GmbH</div>
+				<div class="home-text">
+					<div>Unterstützung im Arbeitsalltag und</div>
+					<div>Weiterbildung</div>
+				</div>
+				<a class="home-btn" href="#">Für Unternehmen</a>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="decor"></div>
+		<div class="description">
+			<div>Die inAut GmbH unterstützt im Auftrag der IV und anderer </div>
+			<div>zuweisender Stellen neurodiverse Menschen</div>
+			<div>(Autismus-Spektrum, AD(H)S) bei der Suche und beim Erhalt</div>
+			<div> eines Ausbildungs- oder Arbeitsplatzes in der</div>
+			<div>Privatwirtschaft</div>
+		</div>
+		<div class="row reference">
+			<div class="col-6 reference-block reference-left">
+				<img src="img/sklad.png" alt="img">
+				<div class="home-title">Angebote</div>
+				<h2>Wie wir Betroffene unterstützen</h2>
+				<p>inAut unterstützt Sie mittels jahrelanger Erfahung kompetent  bei der Berufswahl,  Abklärung der beruflichen Fähigkeiten, Lehrstellen- und Arbeitsplatzsuche in der Privatwirtschaft.</p>
+				<a class="home-btn" href="#">Mehr Erfahren</a>
+			</div>
+			<div class="col-6 reference-block reference-right">
+				<img src="img/eline_neu.png" alt="img">
+				<div class="home-title">Für Unternehmen</div>
+				<h2>Eine neurodiverse Person anstellen</h2>
+				<p>Sie möchten Ihr Team kreativer machen und brauchen Mitarbeitende, die anders denken? Dann sollten Sie sich überlegen, eine neurodiverse Person anzustellen, um den Ideenpool um ein Vielfaches zu erweitern.</p>
+				<a class="home-btn" href="#">Mehr Erfahren</a>
+			</div>
+			<div class="col-6 reference-block reference-left">
+				<img src="img/jobs.png" alt="img">
+				<div class="home-title">Jobs</div>
+				<h2>Eine passende Anstellung finden</h2>
+				<p>Hier finden Sie Job-Ausschreibungen, für die Sie als neurodiverse Person perfekt passen könnten. Sie wissen nicht, welcher Job zu Ihnen passt? - senden Sie inAut Ihren Lebenslauf und er wird anonym aufgeschaltet.</p>
+				<a class="home-btn" href="#">Mehr Erfahren</a>
+			</div>
+			<div class="col-6 reference-block reference-right">
+				<img src="img/mehr.png" alt="img">
+				<div class="home-title">Über uns</div>
+				<h2>Mehr erfahren über inAut</h2>
+				<p>Mit viel Engagement und Fachwissen unterstützen wir Menschen vom Autismus-Spektrum und mit anderen Formen von Neurodiversität seit 2018 dabei, Ihren Platz in der Privatwirtschaft zu finden. </p>
+				<a class="home-btn" href="#">Mehr Erfahren</a>
+			</div>
+		</div>
+	</div>
+
+	<!-- neurodiversity -->
+	<div class="neurodiversity">
+		<div class="container">
+			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
+			<h1>Menschliche Vielfalt erkennen und respektieren</h1>
+			<p>
+				<strong>Neurodiversität ist ein Konzept, bei dem neurologische Unterschiede als menschliche Vielfalt erkannt und respektiert werden</strong>
+				Diese Unterschiede können beispielsweise als
+				<strong class="text-decor">ASS</strong>
+				oder
+				<strong class="text-decor">AD(H)S</strong>
+				definiert sein. Neurodiverse Menschen sind also nicht «krank», ihr Gehirn ist einfach anders
+			</p>
+			<img src="img/svg/plus.svg" alt="img">
+			<div class="neurodiversity-more">Mehr</div>
+		</div>
+	</div>
+
+	<!-- current -->
+	<div class="current">
+		<div class="container">
+			<div class="home-title current-title">Aktuelles</div>
+			<div class="row">
+				<div class="col-4">
+					<div class="current-content">
+						<img src="img/svg/frame.svg" alt="img">
+						<h2>Bewerbungsworkshop</h2>
+						<div>Jährlich bietet inAut einen Bewerbungsworkshop für neurodiverse Menschen an.</div>
+						<a href="#">mehr Erfahren</a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="current-content">
+						<img src="img/svg/frame.svg" alt="img">
+						<h2>Online Workshop Web-Entwicklung</h2>
+						<div>Lerne den Beruf Web-Entwickler hautnah kennen.</div>
+						<a href="#">mehr Erfahren</a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="current-content">
+						<img src="img/svg/frame.svg" alt="img">
+						<h2>2. Nationaler Autismus Kongress</h2>
+						<div>Am 19. und 20. November 2021 findet der 2. nationale Autismuskongress in Bern statt</div>
+						<a href="#">mehr Erfahren</a>
+					</div>
+				</div>
+			</div>
+			<a class="current-link" href="#">
+				Alle Artikel
+				<img src="img/svg/right.svg" alt="img">
+			</a>
+		</div>
+	</div>
+</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
@@ -122,6 +240,7 @@
     </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
+<script src="libs/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
