--- a/app/_home.html
+++ b/app/_home.html
@@ -74,8 +74,8 @@
 	<div class="neurodiversity">
 		<div class="container">
 			<div class="home-title neurodiversity-title">Neurodiversität & Arbeit</div>
-			<h1>Menschliche Vielfalt erkennen und respektieren</h1>
-			<p>
+			<h1 class="neurodiversity-item">Menschliche Vielfalt erkennen und respektieren</h1>
+			<p class="neurodiversity-text">
 				<strong>Neurodiversität ist ein Konzept, bei dem neurologische Unterschiede als menschliche Vielfalt erkannt und respektiert werden</strong>
 				Diese Unterschiede können beispielsweise als
 				<strong class="text-decor">ASS</strong>
@@ -83,7 +83,7 @@
 				<strong class="text-decor">AD(H)S</strong>
 				definiert sein. Neurodiverse Menschen sind also nicht «krank», ihr Gehirn ist einfach anders
 			</p>
-			<img src="img/svg/plus.svg" alt="img">
+			<img class="neurodiversity-img" src="img/svg/plus.svg" alt="img">
 			<div class="neurodiversity-more">Mehr</div>
 		</div>
 	</div>
@@ -98,7 +98,7 @@
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Bewerbungsworkshop</h2>
 						<div>Jährlich bietet inAut einen Bewerbungsworkshop für neurodiverse Menschen an.</div>
-						<a href="#">mehr Erfahren</a>
+						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
 				<div class="col-4">
@@ -106,7 +106,7 @@
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Online Workshop Web-Entwicklung</h2>
 						<div>Lerne den Beruf Web-Entwickler hautnah kennen.</div>
-						<a href="#">mehr Erfahren</a>
+						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
 				<div class="col-4">
@@ -114,7 +114,7 @@
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>2. Nationaler Autismus Kongress</h2>
 						<div>Am 19. und 20. November 2021 findet der 2. nationale Autismuskongress in Bern statt</div>
-						<a href="#">mehr Erfahren</a>
+						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
 			</div>
@@ -122,6 +122,40 @@
 				Alle Artikel
 				<img src="img/svg/right.svg" alt="img">
 			</a>
+		</div>
+	</div>
+
+	<!-- contact-us -->
+	<div class="contact-us">
+		<div class="container">
+			<h3>Kontaktieren Sie uns.</h3>
+			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+			<a class="home-btn" href="#">ZUm Kontakt</a>
+		</div>
+	</div>
+
+	<!-- our-customers -->
+	<div class="our-customers">
+		<div class="container">
+			<!-- <div class="our-customer-slider"> -->
+				<div class="home-title current-title">Unsere Kunden</div>
+				<div class="our-customers-content img-cover">
+					<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.» </h3>
+					<div class="home-title">Hans Muster, Winterthur</div>
+				</div>
+				<div class="home-title current-title">Unsere Kunden</div>
+				<div class="our-customers-block">
+					<div class="our-customers-content img-cover markus">
+						<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
+						<div class="home-title">Markus Löffel, Gerber macht’s</div>
+					</div>
+				</div>
+				<div class="home-title current-title">Unsere Kunden</div>
+				<div class="our-customers-content img-cover">
+					<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
+					<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
+				</div>
+			<!-- </div> -->
 		</div>
 	</div>
 </main>
