--- a/app/_header.html
+++ b/app/_header.html
@@ -5,7 +5,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="#">Angebot</a></li>
+				<li><a href="angebot.html">Angebot</a></li>
 				<li><a href="#">Für Unternehmen</a></li>
 				<li><a href="#">Über uns</a></li>
 				<li><a href="#">Aktuelles</a></li>
