--- a/app/_header.html
+++ b/app/_header.html
@@ -12,7 +12,7 @@
 				<li><a href="#">Jobs</a></li>
 				<li><a href="#"> Kontakt</a></li>
 			</ul>
-			<div class="burger d-block d-lg-none">
+			<div class="burger d-lg-none">
 				<span></span>
 				<span></span>
 				<span></span>
