--- a/app/_angebot.html
+++ b/app/_angebot.html
@@ -18,7 +18,7 @@
                     </div>
                     <h2 class="angebot-block-title">Suche von Schnuppereinsätzen</h2>
                     <div class="angebot-text angebot-block-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich gelebt werden.</div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="search-of-trial-missions.html">zum Angebot</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
