--- a/app/angebot.html
+++ b/app/angebot.html
@@ -79,7 +79,7 @@
                     </div>
                     <h2 class="angebot-block-title">Suche eines Ausbildungsplatzes</h2>
                     <div class="angebot-text angebot-block-text">Von der Suche auf Online-Plattformen, über Bewerbungen erstellen bis zum Begleiten an Vorstellungsgespräche - inAut unterstützt Sie individuell.</div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="job-search.html">zum Angebot</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -87,7 +87,7 @@
                     </div>
                     <h2 class="angebot-block-title">Suche einer Festanstellung</h2>
                     <div class="angebot-text angebot-block-text">Ein massgeschneidertes Stellenprofil,  gezieltes Kommunikationstraining gepaart mit unserem Netzwerk führen Sie zum Erfolg.</div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="looking-job.html">zum Angebot</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -95,7 +95,7 @@
                     </div>
                     <h2 class="angebot-block-title">Coaching während der Ausbildung</h2>
                     <div class="angebot-text angebot-block-text">Eine Ausbildung birgt viele Höhen, aber auch Tiefen. Wir unterstützen Lernende sowie Arbeitgeber/innen auf dem Weg zum erfolgreichen Abschluss. </div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="coaching-training.html">zum Angebot</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -103,7 +103,7 @@
                     </div>
                     <h2 class="angebot-block-title">Berufliche Abklärung in der Privatwirtschaft</h2>
                     <div class="angebot-text angebot-block-text">Oft ist es schwierig, anhand ein bis zwei Schnuppertagen zu entscheiden, welcher der richtige Beruf ist. Eine Abklärung ist viel aufschlussreicher.</div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="professional-clarification.html">zum Angebot</a>
                 </div>
                 <div class="col-4 angebot-block-content">
                     <div class="angebot-block-img">
@@ -111,7 +111,7 @@
                     </div>
                     <h2 class="angebot-block-title">Coaching zum Erhalt eines Arbeitsplatzes</h2>
                     <div class="angebot-text angebot-block-text">Sie haben Schwierigkeiten aufgrund einer Diagnose in Ihrem bisherigen Job zu bestehen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in. </div>
-                    <a class="general-link" href="#">zum Angebot</a>
+                    <a class="general-link" href="coaching-job.html">zum Angebot</a>
                 </div>
             </div>
         </div>
