--- a/app/coaching-training.html
+++ b/app/coaching-training.html
@@ -53,19 +53,21 @@
 </header>
 	<main class="main search-missions">
 	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Suche von Schnuppereinsätzen</a>
-        </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
-                <img src="img/svg/nosem.svg" alt="img">
+        <div>
+            <div class="search-missions-way">
+                <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="#">Coaching während der Ausbildung</a>
             </div>
-            <div class="angebot-item search-missions-article">Suche von Schnuppereinsätzen</div>
+            <div class="search-missions-item">
+                <div class="search-missions-image">
+                    <img src="img/svg/famm.svg" alt="img">
+                </div>
+                <div class="angebot-item search-missions-article">Coaching während der Ausbildung</div>
+            </div>
+            <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
+            <div class="angebot-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
         </div>
-        <h1>Wir suchen mit Ihnen und begleiten Sie bei der Schnupperlehre</h1>
-        <div class="angebot-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
