--- a/app/_search-of-trial-missions.html
+++ b/app/_search-of-trial-missions.html
@@ -1,20 +1,18 @@
 <main class="main search-missions">
 	<div class="container search-missions-container">
-        <div>
-            <div class="search-missions-way">
-                <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-                <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-                <a class="search-missions-link" href="angebot.html">Suche von Schnuppereinsätzen</a>
-            </div>
-            <div class="search-missions-item">
-                <div class="search-missions-image">
-                    <img src="img/svg/nosem.svg" alt="img">
-                </div>
-                <div class="angebot-item search-missions-article">Suche von Schnuppereinsätzen</div>
-            </div>
-            <h1>Wir suchen mit Ihnen und begleiten Sie bei der Schnupperlehre</h1>
-            <div class="angebot-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
+        <div class="search-missions-way">
+            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="search-missions-link" href="#">Suche von Schnuppereinsätzen</a>
         </div>
+        <div class="search-missions-item">
+            <div class="search-missions-image">
+                <img src="img/svg/nosem.svg" alt="img">
+            </div>
+            <div class="angebot-item search-missions-article">Suche von Schnuppereinsätzen</div>
+        </div>
+        <h1>Wir suchen mit Ihnen und begleiten Sie bei der Schnupperlehre</h1>
+        <div class="angebot-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
