--- a/app/professional-clarification.html
+++ b/app/professional-clarification.html
@@ -53,19 +53,21 @@
 </header>
 	<main class="main search-missions">
 	<div class="container search-missions-container">
-        <div class="search-missions-way">
-            <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="search-missions-link" href="#">Suche von Schnuppereinsätzen</a>
-        </div>
-        <div class="search-missions-item">
-            <div class="search-missions-image">
-                <img src="img/svg/nosem.svg" alt="img">
+        <div>
+            <div class="search-missions-way">
+                <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+                <a class="search-missions-link" href="#"> Berufliche Abklärung in der Privatwirtschaft </a>
             </div>
-            <div class="angebot-item search-missions-article">Suche von Schnuppereinsätzen</div>
+            <div class="search-missions-item">
+                <div class="search-missions-image">
+                    <img src="img/svg/polm.svg" alt="img">
+                </div>
+                <div class="angebot-item search-missions-article"> Berufliche Abklärung in der Privatwirtschaft </div>
+            </div>
+            <h1>Abklärung der Eignung für einen Beruf</h1>
+            <div class="angebot-text search-text">Ein Schnuppereinsatz von wenigen Tagen zeigt oftmals nicht, ob ein Beruf auch über längere Zeit die richtige Wahl ist. Im Rahmen der beruflichen Abklärung von einem Monat sucht inAut eine Firma in der Privatwirtschaft als Partner und unterstützt Klient/innen und Arbeitgeber/innen bei der Abklärung der Eignung für den Beruf.</div>
         </div>
-        <h1>Wir suchen mit Ihnen und begleiten Sie bei der Schnupperlehre</h1>
-        <div class="angebot-text search-text">inAut macht «praktische» Berufswahl – das bedeutet, dass Wunschberufe dort ausprobiert werden, wo sie auch tatsächlich ausgeübt werden. Nach gemeinsamer Definition organisiert inAut Schnuppereinsätze in 2-3 Wunschberufen und begleitet die Klient/innen auch vor Ort.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
