--- a/app/_header.html
+++ b/app/_header.html
@@ -6,7 +6,7 @@
 		<div class="header-body">
 			<ul class="menu">
 				<li><a href="angebot.html">Angebot</a></li>
-				<li><a href="#">Für Unternehmen</a></li>
+				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="#">Über uns</a></li>
 				<li><a href="#">Aktuelles</a></li>
 				<li><a href="#">Jobs</a></li>
