--- a/app/for-companies.html
+++ b/app/for-companies.html
@@ -51,24 +51,48 @@
 		</div>
 	</div>
 </header>
-	<main class="main search-missions">
-	<div class="container search-missions-container">
-        <div>
-            <div class="search-missions-way">
-                <a class="search-missions-link" href="index.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-                <a class="search-missions-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-                <a class="search-missions-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
-            </div>
-            <div class="search-missions-item">
-                <div class="search-missions-image">
-                    <img src="img/svg/kompm.svg" alt="img">
+	<main class="main angebot">
+	<div class="container home">
+        <div class="angebot-header">
+            <img class="angebot-img" src="img/bildf.png" alt="img">
+        </div>
+	</div>
+    <div class="container">
+        <div class="angebot-item">Für Unternehmen</div>
+        <h1 class="angebot-title">Wie mache ich mein Team “neuro”-divers?</h1>
+        <div class="angebot-text an-text">Sie möchten die andere Denkweise neurodiversener Personen in Ihrer Unternehmung nutzen? Gerne würden Sie eine neurodiverse Person, z.B. aus dem Autismus-Spektrum anstellen oder ihr einen Ausbildungsplatz anbieten, wissen jedoch nicht, welche Aufgaben in Ihrer Firma sich eignen würden? Oder Sie beschäftigen bereits eine neurdiverse Person und möchten mehr über die Chancen und Herausforderungen im Berufsalltag erfahren?</div>
+        <div class="decor"></div>
+
+        <div class="angebot-block">
+            <div class="row">
+                <div class="col-4 angebot-block-content">
+                    <div class="angebot-block-img">
+                        <img src="img/svg/chair.svg" alt="img">
+                    </div>
+                    <h2 class="angebot-block-title">Eine neurodiverse Person anstellen</h2>
+                    <div class="angebot-text angebot-block-text">Analyse der Anforderungen in Ihrem Unternehmen und Vergleich mit den Anforderungen neurodiverser Menschen.</div>
+                    <a class="general-link" href="#">mehr Erfahren</a>
                 </div>
-                <div class="angebot-item search-missions-article">Coaching zum Erhalt eines Arbeitsplatzes</div>
+                <div class="col-4 angebot-block-content">
+                    <div class="angebot-block-img">
+                        <img src="img/svg/setm.svg" alt="img">
+                    </div>
+                    <h2 class="angebot-block-title">Unterstützung im Arbeitsalltag</h2>
+                    <div class="angebot-text angebot-block-text">Hilfestellungen und Lösungsansätze für aktuelle Herausforderungen im Arbeitsalltag.</div>
+                    <a class="general-link" href="#">mehr Erfahren</a>
+                </div>
+                <div class="col-4 angebot-block-content">
+                    <div class="angebot-block-img">
+                        <img src="img/svg/shapm.svg" alt="img">
+                    </div>
+                    <h2 class="angebot-block-title">Weiterbildungen</h2>
+                    <div class="angebot-text angebot-block-text">Workshops und Weiterbildungen zum Thema Neurodiversität (Autismus-Spektrum, AD(H)S).</div>
+                    <a class="general-link" href="#">mehr Erfahren</a>
+                </div>
             </div>
-            <h1 class="coaching-job-title">inAut unterstützt Sie und Ihren Arbeitgeber im Arbeitsalltag</h1>
-            <div class="angebot-text search-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
         </div>
     </div>
+
     <div class="contact-us">
 		<div class="container">
 			<h3>Kontaktieren Sie uns.</h3>
@@ -76,14 +100,6 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container search-missions-back">
-        <div class="search-missions-content">
-            <a class="search-missions-img" href="angebot.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="search-missions-text">Zurück</div>
-        </div>
-    </div>
 </main>
 	<footer class="footer">
     <div class="footer-content">
