--- a/app/_head.html
+++ b/app/_head.html
@@ -20,7 +20,8 @@
 
 	<!-- Libs -->
 	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
-	<link rel="stylesheet" href="libs/slick/slick.css">
+	<link rel="stylesheet" href="libs/swiper/swiper.min.css">
+	<!-- <link rel="stylesheet" href="libs/slick/slick.css"> -->
 
 	<!-- Style -->
 	<link rel="stylesheet" href="css/index.min.css">
