--- a/app/_scripts.html
+++ b/app/_scripts.html
@@ -1,3 +1,4 @@
 <script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/slick/slick.min.js"></script>
+<!-- <script src="libs/slick/slick.min.js"></script> -->
+<script src="libs/swiper/swiper.min.js"></script>
 <script src="js/main.js"></script>
