--- a/app/_home.html
+++ b/app/_home.html
@@ -1,33 +1,80 @@
 <main class="main">
 	<div class="container home">
-		<div class="customer-slider">
-			<div class="home-content">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Ihre Stellensuche</div>
-					<div>in guten Händen</div>
+		<div class="swiper-container mySwiper">
+			<div class="swiper-wrapper">
+			  <div class="swiper-slide">
+				<div class="home-content">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Ihre Stellensuche</div>
+						<div>in guten Händen</div>
+					</div>
+					<a class="home-btn" href="#">JOBs</a>
 				</div>
-				<a class="home-btn" href="#">JOBs</a>
+			  </div>
+			  <div class="swiper-slide">
+				<div class="home-content home-block-second">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Professionelle Unterstützung bei</div>
+						<div>der Lehrstellensuche</div>
+					</div>
+					<a class="home-btn" href="#">Angebot</a>
+				</div>
+			  </div>
+			  <div class="swiper-slide">
+				<div class="home-content home-block-third">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Unterstützung im Arbeitsalltag und</div>
+						<div>Weiterbildung</div>
+					</div>
+					<a class="home-btn" href="#">Für Unternehmen</a>
+				</div>
+			  </div>
 			</div>
-
-			<div class="home-content home-block-second">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Professionelle Unterstützung bei</div>
-					<div>der Lehrstellensuche</div>
+			<!-- Add Pagination -->
+			<!-- <div class="swiper-block d-flex">
+				<div class="swiper-pagination test ml-5"></div>
+				<div class="swiper-pagination test ml-5"></div>
+				<div class="swiper-pagination test ml-5"></div>
+			</div> -->
+			<div class="swiper-btn">
+				<div class="swiper-button-prev">
+					<img src="img/svg/arrow_left.svg" alt="img">
 				</div>
-				<a class="home-btn" href="#">Angebot</a>
-			</div>
-
-			<div class="home-content home-block-third">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Unterstützung im Arbeitsalltag und</div>
-					<div>Weiterbildung</div>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-next">
+					<img src="img/svg/arrow_right.svg" alt="img">
 				</div>
-				<a class="home-btn" href="#">Für Unternehmen</a>
 			</div>
 		</div>
+		<!-- <div class="home-content">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Ihre Stellensuche</div>
+				<div>in guten Händen</div>
+			</div>
+			<a class="home-btn" href="#">JOBs</a>
+		</div>
+
+		<div class="home-content home-block-second">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Professionelle Unterstützung bei</div>
+				<div>der Lehrstellensuche</div>
+			</div>
+			<a class="home-btn" href="#">Angebot</a>
+		</div>
+
+		<div class="home-content home-block-third">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Unterstützung im Arbeitsalltag und</div>
+				<div>Weiterbildung</div>
+			</div>
+			<a class="home-btn" href="#">Für Unternehmen</a>
+		</div> -->
 	</div>
 	<div class="container">
 		<div class="decor"></div>
