--- a/app/angebot.html
+++ b/app/angebot.html
@@ -22,7 +22,8 @@
 
 	<!-- Libs -->
 	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
-	<link rel="stylesheet" href="libs/slick/slick.css">
+	<link rel="stylesheet" href="libs/swiper/swiper.min.css">
+	<!-- <link rel="stylesheet" href="libs/slick/slick.css"> -->
 
 	<!-- Style -->
 	<link rel="stylesheet" href="css/index.min.css">
@@ -199,7 +200,8 @@
     </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/slick/slick.min.js"></script>
+<!-- <script src="libs/slick/slick.min.js"></script> -->
+<script src="libs/swiper/swiper.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
