--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,8 @@
 
 	<!-- Libs -->
 	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
-	<link rel="stylesheet" href="libs/slick/slick.css">
+	<link rel="stylesheet" href="libs/swiper/swiper.min.css">
+	<!-- <link rel="stylesheet" href="libs/slick/slick.css"> -->
 
 	<!-- Style -->
 	<link rel="stylesheet" href="css/index.min.css">
@@ -53,34 +54,81 @@
 </header>
 	<main class="main">
 	<div class="container home">
-		<div class="customer-slider">
-			<div class="home-content">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Ihre Stellensuche</div>
-					<div>in guten Händen</div>
+		<div class="swiper-container mySwiper">
+			<div class="swiper-wrapper">
+			  <div class="swiper-slide">
+				<div class="home-content">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Ihre Stellensuche</div>
+						<div>in guten Händen</div>
+					</div>
+					<a class="home-btn" href="#">JOBs</a>
 				</div>
-				<a class="home-btn" href="#">JOBs</a>
+			  </div>
+			  <div class="swiper-slide">
+				<div class="home-content home-block-second">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Professionelle Unterstützung bei</div>
+						<div>der Lehrstellensuche</div>
+					</div>
+					<a class="home-btn" href="#">Angebot</a>
+				</div>
+			  </div>
+			  <div class="swiper-slide">
+				<div class="home-content home-block-third">
+					<div class="home-title">inAut GmbH</div>
+					<div class="home-text">
+						<div>Unterstützung im Arbeitsalltag und</div>
+						<div>Weiterbildung</div>
+					</div>
+					<a class="home-btn" href="#">Für Unternehmen</a>
+				</div>
+			  </div>
 			</div>
-
-			<div class="home-content home-block-second">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Professionelle Unterstützung bei</div>
-					<div>der Lehrstellensuche</div>
+			<!-- Add Pagination -->
+			<!-- <div class="swiper-block d-flex">
+				<div class="swiper-pagination test ml-5"></div>
+				<div class="swiper-pagination test ml-5"></div>
+				<div class="swiper-pagination test ml-5"></div>
+			</div> -->
+			<div class="swiper-btn">
+				<div class="swiper-button-prev">
+					<img src="img/svg/arrow_left.svg" alt="img">
 				</div>
-				<a class="home-btn" href="#">Angebot</a>
-			</div>
-
-			<div class="home-content home-block-third">
-				<div class="home-title">inAut GmbH</div>
-				<div class="home-text">
-					<div>Unterstützung im Arbeitsalltag und</div>
-					<div>Weiterbildung</div>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-next">
+					<img src="img/svg/arrow_right.svg" alt="img">
 				</div>
-				<a class="home-btn" href="#">Für Unternehmen</a>
 			</div>
 		</div>
+		<!-- <div class="home-content">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Ihre Stellensuche</div>
+				<div>in guten Händen</div>
+			</div>
+			<a class="home-btn" href="#">JOBs</a>
+		</div>
+
+		<div class="home-content home-block-second">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Professionelle Unterstützung bei</div>
+				<div>der Lehrstellensuche</div>
+			</div>
+			<a class="home-btn" href="#">Angebot</a>
+		</div>
+
+		<div class="home-content home-block-third">
+			<div class="home-title">inAut GmbH</div>
+			<div class="home-text">
+				<div>Unterstützung im Arbeitsalltag und</div>
+				<div>Weiterbildung</div>
+			</div>
+			<a class="home-btn" href="#">Für Unternehmen</a>
+		</div> -->
 	</div>
 	<div class="container">
 		<div class="decor"></div>
@@ -274,7 +322,8 @@
     </div>
 </footer>
 	<script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/slick/slick.min.js"></script>
+<!-- <script src="libs/slick/slick.min.js"></script> -->
+<script src="libs/swiper/swiper.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
