--- a/app/_home.html
+++ b/app/_home.html
@@ -86,28 +86,28 @@
 			<div>Privatwirtschaft</div>
 		</div>
 		<div class="row reference">
-			<div class="col-6 reference-block reference-left">
+			<div class="col-12 col-sm-6 reference-block reference-left">
 				<img src="img/sklad.png" alt="img">
 				<div class="home-title">Angebote</div>
 				<h2>Wie wir Betroffene unterstützen</h2>
 				<p>inAut unterstützt Sie mittels jahrelanger Erfahung kompetent  bei der Berufswahl,  Abklärung der beruflichen Fähigkeiten, Lehrstellen- und Arbeitsplatzsuche in der Privatwirtschaft.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-right">
+			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/eline_neu.png" alt="img">
 				<div class="home-title">Für Unternehmen</div>
 				<h2>Eine neurodiverse Person anstellen</h2>
 				<p>Sie möchten Ihr Team kreativer machen und brauchen Mitarbeitende, die anders denken? Dann sollten Sie sich überlegen, eine neurodiverse Person anzustellen, um den Ideenpool um ein Vielfaches zu erweitern.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-left">
+			<div class="col-12 col-sm-6 reference-block reference-left">
 				<img src="img/jobs.png" alt="img">
 				<div class="home-title">Jobs</div>
 				<h2>Eine passende Anstellung finden</h2>
 				<p>Hier finden Sie Job-Ausschreibungen, für die Sie als neurodiverse Person perfekt passen könnten. Sie wissen nicht, welcher Job zu Ihnen passt? - senden Sie inAut Ihren Lebenslauf und er wird anonym aufgeschaltet.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-right">
+			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/mehr.png" alt="img">
 				<div class="home-title">Über uns</div>
 				<h2>Mehr erfahren über inAut</h2>
@@ -140,7 +140,7 @@
 		<div class="container">
 			<div class="home-title current-title">Aktuelles</div>
 			<div class="row">
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Bewerbungsworkshop</h2>
@@ -148,7 +148,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Online Workshop Web-Entwicklung</h2>
@@ -156,7 +156,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>2. Nationaler Autismus Kongress</h2>
