--- a/app/angebot.html
+++ b/app/angebot.html
@@ -145,12 +145,12 @@
                 <div class="col-12 footer-logo">
                     <img src="img/svg/logo.svg" alt="img">
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-sm-3 col-md-4 indent-col">
                     <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
                         inAut GmbH Waldstätterstrasse 3 6003 Luzern
                     </a>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6 col-md-5 indent-col">
                     <div class="footer-block">
                         <div>Telefon</div>
                         <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
@@ -160,7 +160,7 @@
                         <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-sm-3 indent-col">
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
