--- a/app/index.html
+++ b/app/index.html
@@ -140,28 +140,28 @@
 			<div>Privatwirtschaft</div>
 		</div>
 		<div class="row reference">
-			<div class="col-6 reference-block reference-left">
+			<div class="col-12 col-sm-6 reference-block reference-left">
 				<img src="img/sklad.png" alt="img">
 				<div class="home-title">Angebote</div>
 				<h2>Wie wir Betroffene unterstützen</h2>
 				<p>inAut unterstützt Sie mittels jahrelanger Erfahung kompetent  bei der Berufswahl,  Abklärung der beruflichen Fähigkeiten, Lehrstellen- und Arbeitsplatzsuche in der Privatwirtschaft.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-right">
+			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/eline_neu.png" alt="img">
 				<div class="home-title">Für Unternehmen</div>
 				<h2>Eine neurodiverse Person anstellen</h2>
 				<p>Sie möchten Ihr Team kreativer machen und brauchen Mitarbeitende, die anders denken? Dann sollten Sie sich überlegen, eine neurodiverse Person anzustellen, um den Ideenpool um ein Vielfaches zu erweitern.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-left">
+			<div class="col-12 col-sm-6 reference-block reference-left">
 				<img src="img/jobs.png" alt="img">
 				<div class="home-title">Jobs</div>
 				<h2>Eine passende Anstellung finden</h2>
 				<p>Hier finden Sie Job-Ausschreibungen, für die Sie als neurodiverse Person perfekt passen könnten. Sie wissen nicht, welcher Job zu Ihnen passt? - senden Sie inAut Ihren Lebenslauf und er wird anonym aufgeschaltet.</p>
 				<a class="home-btn" href="#">Mehr Erfahren</a>
 			</div>
-			<div class="col-6 reference-block reference-right">
+			<div class="col-12 col-sm-6 reference-block reference-right">
 				<img src="img/mehr.png" alt="img">
 				<div class="home-title">Über uns</div>
 				<h2>Mehr erfahren über inAut</h2>
@@ -194,7 +194,7 @@
 		<div class="container">
 			<div class="home-title current-title">Aktuelles</div>
 			<div class="row">
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Bewerbungsworkshop</h2>
@@ -202,7 +202,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Online Workshop Web-Entwicklung</h2>
@@ -210,7 +210,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-12 col-sm-4 indent-col">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>2. Nationaler Autismus Kongress</h2>
@@ -267,12 +267,12 @@
                 <div class="col-12 footer-logo">
                     <img src="img/svg/logo.svg" alt="img">
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-sm-3 col-md-4 indent-col">
                     <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
                         inAut GmbH Waldstätterstrasse 3 6003 Luzern
                     </a>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6 col-md-5 indent-col">
                     <div class="footer-block">
                         <div>Telefon</div>
                         <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
@@ -282,7 +282,7 @@
                         <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-sm-3 indent-col">
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
